--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/util.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,100;1,500&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
         <ul class="navlink-cont flex-horizontal">
             <div class="brand-name-container">
                 <li class="nav-links brand-logo">
-                <a href="../html/index.html" class="brand-name"><img src="../images/logo.png" class="img" alt="HardTech-Solution"></a></li>
+                <a href="../html/index.html" ><img src="../images/logo.png" class="img" alt="HardTech-Solution"></a></li>
         </div>
         <div class="nav-links-cont flex-horizontal">
             <li class="nav-links"><a class="active" href="#">Home</a></li>
@@ -29,7 +30,15 @@
         </ul>
         <div class="left"></div>
     </div>    
-    <div class="img-bg"></div>
+    <div class="img-bg">
+    </div>
+    <div class="company-Info">
+        <div class="company-logo"></div>
+        <div class="company-text">  <div class="brand-title" style="opacity:1">HardTech Solutions</div>
+        <div class="brand-tag-line" style="opacity:1">One Stop to all your Device's Problems</div>
+         </div>
+    </div>
+    
 </div>
 
 </body>
