added reponsive changes partially

--- a/html/index.html
+++ b/html/index.html
@@ -16,11 +16,10 @@
 <body>
 <div class="firstPage">
     <div class="navbar background flex-horizontal">
-        <div class="left"></div>
         <ul class="navlink-cont flex-horizontal">
             <div class="brand-name-container">
                 <li class="nav-links brand-logo">
-                <a href="../html/index.html" ><img src="../images/logo.png" class="img" alt="HardTech-Solution"></a></li>
+                <a href="../html/index.html" ><img src="../images/repair.png" class="img" alt="HardTech-Solution"></a></li>
         </div>
         <div class="nav-links-cont flex-horizontal">
             <li class="nav-links"><a class="active" href="#">Home</a></li>
@@ -28,10 +27,8 @@
             <li class="nav-links"><a href="#footer">About Us</a></li>
         </div>
         </ul>
-        <div class="left"></div>
     </div>    
-    <div class="img-bg">
-    </div>
+    <div class="img-bg"></div>
     <div class="company-Info">
         <div class="company-logo"></div>
         <div class="company-text">  <div class="brand-title">HardTech Solutions</div>
