--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,100;1,500&display=swap" rel="stylesheet">
 <script src="../Js/index.js"></script>
+<link rel="shortcut icon" href="../images/repair.ico" type="image/x-icon">
+<link rel="icon" href="../images/repair.ico" type="image/x-icon">
 </head>
 <body>
 <div class="firstPage">
@@ -39,7 +41,7 @@
 </div>
 <div class="info-box">
     <div class="info-text">
-       <span style="font-weight: 700;">"</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis expedita at consequatur rerum aperiam! Fugit, labore! Minus, hic asperiores odit tempora voluptates, saepe quaerat, accusamus placeat quidem praesentium culpa! Libero fuga commodi omnis aliquam laudantium. Eius, obcaec <span style="font-weight: 700;">"</span>
+       <span style="font-weight: 700;">"</span> Hey this is Sanjay Pattnaik the Owner of HardTech Solutions, We have 6 years of Experience in this field and we offer the best service and also we respect your Time and hence Punctuality is key of our Business<span style="font-weight: 700;">"</span>
     </div>
 </div>
 <div class="service-panel" id="SERVICES">
@@ -47,23 +49,23 @@
         <div class="img-cont" style="background-image: url(../images/mobile-repairing.png);margin-left:3.05vw;"></div>
         <div class="title"><h2>Mobiles</h2></div>
         <div class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa sit aspernatur modi architecto! Consequuntur voluptas ipsam laboriosam in
+            We are skilled to repair all kinds of phone from Android to iPhone all the Accessories related to Mobile Phones are Also Available Click Below to Submit the Problem with your Device
         </div>
-        <div class="butt-cont"><button onclick="mobile(); " class="launch">Know More</button></div>
+        <div class="butt-cont"><button onclick="mobile(); " class="launch">Reach us</button></div>
     </div>
     <div class="laptop" id="lap">
         <div class="img-cont" style="background-image: url(../images/lap_repair.png); width:67%;height:48%;" ></div>
         <div class="title"><h2>Laptops</h2></div>
-        <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur harum voluptatum iusto explicabo eius doloribus quaerat veritatis </div>
-        <div class="butt-cont"><button onclick=" laptop();" class="launch">Know More</button></div>
+        <div class="text">Laptop are the second essential thing after Mobile Phones and yet They are Most Vulnerable item, here we Buy, Sell, Repair, Upgrade Laptops at very Reasonable Prices So Click the button below and Reach at us immediately</div>
+        <div class="butt-cont"><button onclick=" laptop();" class="launch">Reach us</button></div>
     </div>
     <div class="computer" id="com">
         <div class="img-cont" style="background-image: url(../images/pc-card-bg.png);width:80%;height:42%;"></div>
         <div class="title"><h2>PCs</h2></div>
         <div class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, adipisci laboriosam, sint minima amet blanditiis possimus, quia reiciendis itaque debitis ipsum iusto enim nihil nisi?
+           Now a Days PCs became the Luxury of Life people use it for work and also most of them use it for gaming as the E-sports culture has flourished so We Repair, Build and Modify PCs according to your convenience so hurry up and reach us by clicking below button
         </div>
-        <div class="butt-cont"><button onclick="computer();" class="launch">Know More</button></div>
+        <div class="butt-cont"><button onclick="computer();" class="launch">Reach us</button></div>
     </div>
 </div>
 <footer id="footer">
@@ -75,7 +77,7 @@
     <div class="personal-info">
         <div class="contact">
             <div class="contactHead h3 sans-serif">Contact Us</div>
-            <div class="number sans-serif">9106033690 - Sanjay Pattnaik</div>
+            <div class="number sans-serif">8758758116 - Sanjay Pattnaik</div>
             <a href="tel:9106033690" class="call"><button class="callButton launch">Call US</button></a>
         </div>
         <div class="address contact">
